--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
+    "@gumgum/react-script-tag": "^0.0.3",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
@@ -21,22 +22,31 @@
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "compression": "^1.7.4",
+    "compression-webpack-plugin": "^3.0.0",
     "css-loader": "0.28.4",
+    "disqus-react": "^1.0.6",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "4.2.0",
     "history": "4.7.2",
+    "jquery": "^3.4.1",
     "moment": "2.18.1",
     "node-sass": "4.12.0",
     "normalize.css": "7.0.0",
     "numeral": "2.0.6",
-    "react": "15.6.1",
+    "pure-react-carousel": "^1.21.2",
+    "react": "16.9.0",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.3.0",
-    "react-dom": "15.6.1",
+    "react-disqus-thread": "^0.4.0",
+    "react-dom": "16.9.0",
+    "react-helmet": "^5.2.1",
+    "react-inline-script": "^1.2.0",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
-    "react-router-dom": "4.1.2",
+    "react-router-dom": "5.0.1",
+    "react-script-tag": "^1.1.2",
     "react-transition-group": "^4.3.0",
     "redux": "3.7.2",
     "redux-mock-store": "1.2.3",
