--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dates": "12.3.0",
     "react-disqus-thread": "^0.4.0",
     "react-dom": "16.9.0",
+    "react-gradient-progress": "^1.0.2",
     "react-helmet": "^5.2.1",
     "react-inline-script": "^1.2.0",
     "react-modal": "2.2.2",
@@ -52,6 +53,7 @@
     "redux-mock-store": "1.2.3",
     "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
+    "semantic-ui-react": "^0.88.0",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
