--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
-    "@gumgum/react-script-tag": "^0.0.3",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-brands-svg-icons": "^5.10.2",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.4.1",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
@@ -22,38 +29,30 @@
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
-    "compression": "^1.7.4",
-    "compression-webpack-plugin": "^3.0.0",
+    "bootstrap": "^4.3.1",
     "css-loader": "0.28.4",
-    "disqus-react": "^1.0.6",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "4.2.0",
+    "font-awesome": "^4.7.0",
     "history": "4.7.2",
-    "jquery": "^3.4.1",
     "moment": "2.18.1",
     "node-sass": "4.12.0",
     "normalize.css": "7.0.0",
     "numeral": "2.0.6",
-    "pure-react-carousel": "^1.21.2",
-    "react": "16.9.0",
+    "react": "16.8.0",
     "react-addons-shallow-compare": "15.6.0",
+    "react-bootstrap": "^1.0.0-beta.11",
     "react-dates": "12.3.0",
-    "react-disqus-thread": "^0.4.0",
-    "react-dom": "16.9.0",
-    "react-gradient-progress": "^1.0.2",
-    "react-helmet": "^5.2.1",
-    "react-inline-script": "^1.2.0",
-    "react-modal": "2.2.2",
+    "react-dom": "16.8.6",
+    "react-modal": "3.9.1",
     "react-redux": "5.0.5",
     "react-router-dom": "5.0.1",
-    "react-script-tag": "^1.1.2",
     "react-transition-group": "^4.3.0",
     "redux": "3.7.2",
     "redux-mock-store": "1.2.3",
     "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
-    "semantic-ui-react": "^0.88.0",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
@@ -62,7 +61,7 @@
   "devDependencies": {
     "cross-env": "5.0.5",
     "dotenv": "4.0.0",
-    "enzyme": "2.9.1",
+    "enzyme": "3.10.0",
     "enzyme-to-json": "1.5.1",
     "jest": "20.0.4",
     "react-test-renderer": "15.6.1",
