--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "16.8.6",
     "react-modal": "3.9.1",
     "react-redux": "5.0.5",
+    "react-router": "^5.0.1",
     "react-router-dom": "5.0.1",
     "react-transition-group": "^4.3.0",
     "redux": "3.7.2",
